Correct masthead viewport alignment

--- a/studio/client/styles/shell.css
+++ b/studio/client/styles/shell.css
@@ -14,7 +14,7 @@
   gap: 1rem;
   align-items: center;
   width: calc(100vw - 3rem);
-  margin-left: calc((min(82rem, calc(100vw - 3rem)) - (100vw - 3rem)) / 2);
+  margin-left: calc((min(82rem, calc(100vw - 3rem)) - 100vw) / 2);
   min-height: 4.2rem;
   padding: 0.75rem 0;
   margin-bottom: 2rem;
